--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,162 @@
 html {
-  background: #0025ff;
-  color: #fff;
-}
+  background: #d8e4bc;
+  color: black;
+
+  * {
+    box-sizing: border-box;
+  }
+
+  body {
+    margin: 0;
+    padding: 0;
+  }
+
+  .header {
+    border: 2px;
+    padding: 1em;
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  .logo {
+    max-width: 30%;
+  }
+
+  .logo img {
+    width: 20%;
+  }
+
+  .text {
+    text-align: center;
+    width: 40%;
+  }
+
+  .nav {
+    overflow: hidden;
+    background-color: #4f7942;
+    display: flex;
+    align-items: center;
+  }
+
+  .nav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    padding: 20px 30px;
+  }
+
+  .nav a:hover {
+    background-color: #9acd32;
+    color: black;
+  }
+
+  .search-container {
+    display: flex;
+    align-items: baseline;
+    padding-left: 30px;
+  }
+
+  input[type="text"] {
+    padding: 5px;
+  }
+
+  button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+  }
+
+  /* Style the the big news from here */
+
+
+  .big-news {
+    border: thin #738678 solid;
+    display: grid;
+    grid-column: span 8;
+    padding: 20px;
+    max-width: 900px;
+    margin: 10px;
+  }
+
+  .big-news-img {
+    max-width: 100%;
+    max-height: 500px;
+    object-fit: cover;
+  }
+
+  .figcaption {
+    position: absolut;
+    background-color: #4f7942;
+    color: #fff;
+    font: italic small-caps;
+    padding: 5px;
+    text-align: center;
+
+  }
+
+  .news-content {
+    margin-top: 10px;
+  }
+
+  .read-more-button {
+    margin-top: 10px;
+  }
+
+  .button1 {
+    background-color: #4f7942;
+    color: black;
+    padding: 10px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    font-weight: bold;
+  }
+
+  /* Style the grid container */
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    padding: 20px;
+    max-width: 1600px;
+    margin: 0 auto;
+  }
+
+  .grid-item {
+    background-color: yellow;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+  }
+
+  /* Media queries for responsiveness */
+  @media (max-width: 1024px) {
+    .grid-container {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+
+  @media (max-width: 767px) {
+    .grid-container {
+      grid-template-columns: 1fr;
+    }
+  }
+
+  /* Here we play with the footer */
+  article {
+    min-height: 100%;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+  }
+
+  footer {
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+    background-color: #4f7942;
+    color: #fff;
+  }
