--- a/code/style.css
+++ b/code/style.css
@@ -1,5 +1,6 @@
 html {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: palegoldenrod;
 }
 
 body {
@@ -21,6 +22,10 @@ a {
   display: block;
 }
 
+p {
+  text-align: justify;
+}
+
 .big-news {
   margin: 20px;
   display: grid;
@@ -29,15 +34,17 @@ a {
   justify-content: center;
   max-width: 100%;
   max-height: 100%;
-  grid-template-areas:
-    "gridrow1"
-    "lucerne"
-    "gridrow3";
 }
 
 .lucerne {
-  grid-area: lucerne;
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
+}
+
+.other-news {
+  margin: 20px;
+  display: grid;
+  max-width: 100%;
+  max-height: 100%;
 }
