--- a/code/style.css
+++ b/code/style.css
@@ -1,8 +1,3 @@
-/*html {
-  background: #e4d4d4;
-  color: black;
-}*/
-
 :root{
   --color1:seashell;
   --color2: #d4c4cc;
@@ -41,29 +36,29 @@ ul{
 
 .align-items-center{
 align-items: center;
-}
-
-.align-items-center{
 justify-content: space-between;
 }
 
 /*header*/
+
+.logo {
+  display: flex;
+  flex-direction: row;
+}
+
+.menu-btn img {
+  width: 40px;
+}
+
 .header{
   background-color: var(--color2);
-  padding: 12px 0;
-}
-
-.header .logo{
-  background-color: var(--color2)
-}
-
-.header .nav{
-  background-color: var(--color2);
+  padding: 10px 0;
 }
 
 .header .logo,
 .header .nav{
   padding:0 15px;
+  background-color: var(--color2)
 }
 
 .header .nav ul li{
@@ -74,7 +69,7 @@ margin-left: 50px;
 .header .nav ul li a{
   display: block;
   color: var(--color3);
-  font-size: 25px;
+  font-size: 20px;
   text-transform: capitalize;
   transition: all 0.5s ease;
   }
@@ -84,11 +79,136 @@ margin-left: 50px;
   color: var(--color1);
   }
 
-  .logo-img {
+.logo-img {
   width: 80%;
   }
 
-/*li {
-  display: inline;
-}*/
+.logo-name {
+  color: var(--color1);
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 20px;
+}
 
+.menu-btn {
+  display: none;
+  cursor: pointer;
+}
+/*END OF HEADER*/
+
+.article-container {
+  display: flex;
+  max-width: 800px;
+  margin: 20px;
+}
+
+.article-container img {
+  width: 400px;
+}
+
+.text-container {
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.text-container h1 {
+  color: var(--color3);
+  
+}
+
+.button-1 {
+  background: var(--color2);
+  border-radius: 999px;
+  box-shadow: var(--color2) 0 10px 20px -10px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  opacity: 1;
+  outline: 0 solid transparent;
+  padding: 8px 18px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: fit-content;
+  word-break: break-word;
+  border: 0;
+}
+
+.button-1:hover{
+  background-color: var(--color3);
+}
+
+/* Styling for the article cards*/
+.other-news img {
+  width: 300px;
+}
+
+.other-news {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+  margin: 20px auto;
+}
+
+.article-card {
+  padding: 20px;
+  border: 1px solid #ddd;
+  text-align: center;
+  background-color: var(--color2);
+}
+
+/* MEDIA QUERY FOR PHONE <767px*/
+@media all and (max-width: 768px) {
+  .nav {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    }
+  .nav a {
+    padding: 15px;
+    text-align: left;
+  }
+
+  .menu-btn{
+    display: block;
+    padding-right: 25px;
+  }
+
+  .logo-name{
+    display: none;
+  }
+
+}
+/*END OF MEDIA QUERY FOR PHONE*/
+
+/* MEDIA QUERY FOR TABLET 768-991px --- not done!! */
+@media all and (max-width: 991px) {
+  .nav {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    }
+  .nav a {
+    padding: 15px;
+    text-align: left;
+  }
+
+  .menu-btn{
+    display: block;
+    padding-right: 25px;
+  }
+
+  .logo-name {
+    display: none;
+  }
+}
+/*END OF MEDIA QUERY FOR TABLET*/
