--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,8 @@
 html {
   background: #9d463e;
   color: #fff;
+  margin: 0;
+  padding: 0;
 }
 
 /* UTILITIES */
@@ -37,7 +39,7 @@ li {
   color: #fff;
 }
 
-/* LOGO */
+/* LOGO IN NAVBAR */
 .logo {
   font-size: 40px;
   font-style: oblique;
@@ -114,47 +116,61 @@ input[type=checkbox] {
 /*START OF GRID*/
 /*ON COMPUTER SIZED SCREENS*/
 
-.grid-parent {
+.wrapper {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  /* Adjusted for 4 columns */
   height: fit-content;
   background-color: #9d463e;
   gap: 20px;
+
 }
 
-.grid-item {
+.top-article {
   background-color: #bd716a;
   text-align: center;
   font-size: 18px;
   padding: 50px;
   margin-bottom: 20px;
+  grid-column: span 4;
 }
 
-.grid-a {
-  grid-column: span 6;
-}
 
 h1 {
   font-size: 50px;
   padding: 30px;
   padding-top: 50px;
+  text-align: center;
 }
 
 h2 {
   font-size: 25px;
   padding: 40px;
+  text-align: center;
 }
+
+h3 {
+  font-size: 16px;
+  font-family: Arial;
+  max-width: 280px;
+  margin: auto;
+}
+
 
 .venice1 {
   max-width: 90%;
   padding: 30px;
 }
 
-.grid-b {
-  grid-column: 1 / 4;
+.doubleArticleHelsinki {
+  grid-column: 1 / 3;
+  text-align: center;
+  background-color: #bd716a;
+  padding: 5px 0 30px 0;
+  margin-left: 20px;
 }
 
-.helsinki {
+.helsinkiImg {
   float: center;
   width: 460px;
   height: 350px;
@@ -164,13 +180,18 @@ h2 {
 
 a {
   color: #fff;
+  justify-content: center;
 }
 
-.grid-c {
-  grid-column: 4 / 7;
+.doubleArticleVenice {
+  grid-column: 3 / 5;
+  text-align: center;
+  padding: 0;
+  margin-right: 20px;
+  background-color: #bd716a;
 }
 
-.venice2 {
+.veniceImg {
   float: center;
   width: 460px;
   height: 350px;
@@ -178,18 +199,23 @@ a {
   padding: 30px;
 }
 
-.lonly {
-  grid-column: span 6;
+.centerHeader {
+  grid-column: span 4;
   background-color: #9d463e;
   font-size: 30px;
   padding: 70px;
+  text-align: center;
 }
 
-.grid-d {
-  grid-column: 1 / 3;
+.trippleArticleCroatia {
+  grid-column: 1 / 2;
+  text-align: center;
+  background-color: #bd716a;
+  padding: 0 25px;
+  margin-left: 20px;
 }
 
-.croatia {
+.croatiaImg {
   float: center;
   width: 320px;
   height: 500px;
@@ -197,11 +223,15 @@ a {
   padding: 30px;
 }
 
-.grid-e {
-  grid-column: 3 / 5;
+.trippleArticleSardinia {
+  grid-column: 2 / 4;
+  text-align: center;
+  background-color: #bd716a;
+  padding: 0 25px;
+  margin: 0 30px;
 }
 
-.sardinia {
+.sardiniaImg {
   float: center;
   width: 320px;
   height: 500px;
@@ -209,11 +239,15 @@ a {
   padding: 30px;
 }
 
-.grid-f {
-  grid-column: 5 / 7;
+.trippleArticleBarcelona {
+  grid-column: 4 / 5;
+  text-align: center;
+  background-color: #bd716a;
+  padding: 0 20px;
+  margin-right: 20px;
 }
 
-.barcelona {
+.barcelonaImg {
   float: center;
   width: 320px;
   height: 500px;
@@ -221,9 +255,13 @@ a {
   padding: 30px;
 }
 
-.grid-g {
-  grid-column: span 6;
+.bottomAricle {
+  grid-column: span 4;
   place-items: center;
+  text-align: center;
+  background-color: #bd716a;
+  padding: 60px 70px;
+  margin-top: 20px;
 }
 
 
@@ -250,19 +288,317 @@ ul {
   justify-content: space-evenly;
 }
 
-@media screen and (max-width: 1024px) {
 
-  /* GRID STYLE UNDER 1024PX*/
-  /* Change display to block for mobile layout */
 
-  .grid-parent {
-    display: block;
-    box-sizing: border-box;
-    grid-template-columns: 1fr;
+
+
+
+
+
+
+
+
+
+/* GRID STYLE FOR TABLETS UNDER 1024PX (2 columns) */
+@media screen and (max-width: 1285px) {
+  .wrapper {
+    grid-template-columns: repeat(2, 1fr);
+    /* 2 columns for tablets */
+    display: grid;
+    width: 100%;
+    margin: 0;
+    gap: 5px;
   }
 
-  .grid-item {
+  h3 {
+    font-size: 16px;
+    font-family: Arial;
+    max-width: 300px;
+    margin: auto;
+    padding: 0 0 15px 0;
+  }
+
+  /* .grid-item {
     width: 100%;
     margin-bottom: 10px;
     padding: 20px;
+  } */
+
+  .top-article {
+    background-color: #bd716a;
+    text-align: center;
+    font-size: 18px;
+    padding: 50px;
+    margin-bottom: 20px;
+    grid-column: span 2;
+    margin: 0 30px;
   }
+
+  .doubleArticleHelsinki {
+    grid-column: 1/2;
+    text-align: center;
+    background-color: #bd716a;
+    padding: 0 10px;
+    margin: 0 30px;
+  }
+
+  .doubleArticleVenice {
+    grid-column: 2/3;
+    text-align: center;
+    padding: 0 10px;
+    margin: 0 30px;
+    background-color: #bd716a;
+  }
+
+  .centerHeader {
+    grid-column: span 2;
+    background-color: #9d463e;
+    font-size: 30px;
+    padding: 70px;
+    text-align: center;
+    margin: 0 30px;
+  }
+
+  .helsinkiImg {
+    float: center;
+    width: 260px;
+    height: 350px;
+    object-fit: cover;
+    padding: 30px;
+  }
+
+  .veniceImg {
+    float: center;
+    width: 260px;
+    height: 350px;
+    object-fit: cover;
+    padding: 30px;
+  }
+
+  .trippleArticleCroatia {
+    grid-column: 1/ 2;
+    text-align: center;
+    background-color: #bd716a;
+    padding: 0 15px;
+    margin: 0 30px;
+  }
+
+  .croatiaImg {
+    float: center;
+    width: 330px;
+    height: 330px;
+    object-fit: cover;
+    margin-left: 0 0 30px 0;
+  }
+
+  .trippleArticleSardinia {
+    grid-column: 2 / 3;
+    text-align: center;
+    background-color: #bd716a;
+    padding: 0 15px;
+    margin: 0 30px 0 0;
+  }
+
+  .sardiniaImg {
+    float: center;
+    width: 330px;
+    height: 330px;
+    object-fit: cover;
+    padding: 30px;
+  }
+
+  .trippleArticleBarcelona {
+    grid-column: span 2;
+    text-align: center;
+    background-color: #bd716a;
+    padding: 0 10px;
+    margin: 30px;
+  }
+
+  .barcelonaImg {
+    float: center;
+    width: 530px;
+    height: 530px;
+    object-fit: cover;
+    margin-left: 0 0 30px 0;
+  }
+
+  .bottomAricle {
+    grid-column: span 2;
+    place-items: center;
+    text-align: center;
+    background-color: #bd716a;
+    padding: 30px;
+    margin: 0 30px;
+  }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* GRID STYLE FOR MOBILES UNDER 768px (1 column) */
+@media screen and (max-width: 768px) {
+  .wrapper {
+    grid-template-columns: 1fr;
+    /* 1 columns for phones */
+    display: grid;
+    width: 100%;
+    margin: 0;
+    gap: 5px;
+  }
+
+  h1 {
+    font-size: 25px;
+    padding: 10px 30px;
+    padding-top: 50px;
+    text-align: center;
+  }
+
+  h2 {
+    font-size: 17px;
+    padding: 10px 40px;
+    text-align: center;
+  }
+
+  h3 {
+    font-size: 13px;
+    font-family: Arial;
+    max-width: 400px;
+    margin: auto;
+  }
+
+  /* .grid-item {
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 20px;
+  } */
+
+  .top-article {
+    background-color: #bd716a;
+    text-align: center;
+    font-size: 18px;
+    padding: 50px;
+    margin-bottom: 20px;
+    grid-column: span 1;
+    margin: 0;
+  }
+
+  .doubleArticleHelsinki {
+    grid-column: span 1;
+    text-align: center;
+    background-color: #bd716a;
+    padding: 0 10px;
+    margin: 0 30px;
+  }
+
+  .doubleArticleVenice {
+    grid-column: span 1;
+    text-align: center;
+    padding: 0 10px;
+    margin: 0 30px;
+    background-color: #bd716a;
+  }
+
+  .centerHeader {
+    grid-column: span 1;
+    background-color: #9d463e;
+    font-size: 30px;
+    padding: 70px;
+    text-align: center;
+    margin: 0;
+  }
+
+  .helsinkiImg {
+    float: center;
+    width: 260px;
+    height: 350px;
+    object-fit: cover;
+    padding: 30px;
+  }
+
+  .veniceImg {
+    float: center;
+    width: 260px;
+    height: 350px;
+    object-fit: cover;
+    padding: 30px;
+  }
+
+  .trippleArticleCroatia {
+    grid-column: span 1;
+    text-align: center;
+    background-color: #bd716a;
+    padding: 0 10px;
+    margin: 15px;
+  }
+
+  .croatiaImg {
+    float: center;
+    width: 290px;
+    height: 290px;
+    object-fit: cover;
+    margin: 0;
+  }
+
+  .trippleArticleSardinia {
+    grid-column: span 1;
+    text-align: center;
+    background-color: #bd716a;
+    padding: 0 10px;
+    margin: 15px;
+  }
+
+  .sardiniaImg {
+    float: center;
+    width: 290px;
+    height: 290px;
+    object-fit: cover;
+    padding: 30px;
+  }
+
+  .trippleArticleBarcelona {
+    grid-column: span 1;
+    text-align: center;
+    background-color: #bd716a;
+    margin: 0;
+    margin: 15px;
+  }
+
+  .barcelonaImg {
+    float: center;
+    width: 290px;
+    height: 290px;
+    object-fit: cover;
+    margin-left: 0 0 30px 0;
+  }
+
+  .bottomAricle {
+    grid-column: span 1;
+    place-items: center;
+    text-align: center;
+    background-color: #bd716a;
+    padding: 30px;
+    margin: 0;
+  }
+
+  footer {
+    background-color: #9d463e;
+    padding: 3rem 1.5rem;
+    grid-column: span 1;
+  }
+
+  p {
+    font-size: 13px;
+  }
+}
