--- a/code/style.css
+++ b/code/style.css
@@ -5,6 +5,14 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 25%);
 }
+h1 {
+  font-family: 'Almendra SC', serif;}
+h2, h3 {
+  font-family: 'Playpen Sans', cursive;
+}
+p {
+  font-family: 'Montserrat', sans-serif;
+}
 header {
   grid-column: span 4;
 }
