--- a/code/style.css
+++ b/code/style.css
@@ -15,6 +15,22 @@ p {
 }
 header {
   grid-column: span 4;
+  display: grid;
+  grid-template-columns: 1fr 40% 40%;
+}
+.logo {
+  height: 100px;
+  width: 100px;
+}
+.main-menu {
+  margin-top: 30px;
+  margin-left: 20px;
+  display: flex;
+  justify-content: flex-end;
+}
+.main-menu a{
+  color: red;
+  margin: 10px;
 }
 section{
   display: flex;
