--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,458 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #000000;
+  color: #ffffff;
+  font-family: 'Nunito Sans', sans-serif;
+  
+}
+
+.container{
+display: grid;
+grid-template-columns: repeat(2,1fr);
+grid-template-rows: repeat(28,100px);
+
+}
+
+.header{
+  grid-column: span 2;
+  grid-row: 1/3;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.nav{
+  grid-column: 2;
+}
+
+.navbar{
+  list-style: none;
+}
+
+.info1{
+  grid-column: span 2;
+  grid-row: 3/6;
+  font-size: small;
+  text-align: center;
+  background-color: #ffffff;
+  color: #000;
+  
+}
+
+.big-news{
+  grid-column: span 2;
+  grid-row: 6/10;
+  overflow: hidden;
+}
+
+img{
+  width: 100%;
+}
+
+.info2{
+  grid-column: span 2;
+  grid-row: 10/12;
+  font-size: small;
+  text-align: center;
+  background-color: #ffffff;
+  color: #000;
+}
+
+.ett{
+  grid-column: 1;
+  grid-row: 13/15;
+}
+
+.två{
+  grid-column: 1;
+  grid-row: 15/17;
+}
+
+.tre{
+grid-column: 1;
+grid-row: 17/19;
+}
+
+.fyra{
+grid-column: 1;
+grid-row: 19/21;
+}
+
+.fem{
+grid-column: 1;
+grid-row: 21/23;
+}
+
+.sex{
+grid-column: 1;
+grid-row: 23/25;
+}
+
+.sju{
+grid-column: 1;
+grid-row: 25/27;
+}
+
+.åtta{
+grid-column: 1;
+grid-row: 27/29;
+overflow: hidden;
+}
+
+.text1{
+  grid-column: 2;
+  grid-row: 13/15;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  text-decoration: underline;
+  background-color: #ffffff;
+  color:#000;
+}
+
+.text2{
+  grid-column: 2;
+  grid-row: 15/17;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  text-decoration: underline;
+  background-color: #ffffff;
+  color:#000;
+}
+
+.text3{
+  grid-column: 2;
+  grid-row: 17/19;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  text-decoration: underline;
+  background-color: #ffffff;
+  color:#000;
+}
+
+.text4{
+  grid-column: 2;
+  grid-row: 19/21;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  text-decoration: underline;
+  background-color: #ffffff;
+  color:#000;
+}
+
+.text5{
+  grid-column: 2;
+  grid-row: 21/23;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  text-decoration: underline;
+  background-color: #ffffff;
+  color:#000;
+}
+  
+.text6{
+  grid-column: 2;
+  grid-row: 23/25;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  text-decoration: underline;
+  background-color: #ffffff;
+  color:#000;
+}
+
+.text7{
+  grid-column: 2;
+  grid-row: 25/27;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  text-decoration: underline;
+  background-color: #ffffff;
+  color:#000;
+}
+  
+.text8{
+  grid-column: 2;
+  grid-row: 27/29;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  text-decoration: underline;
+  background-color: #ffffff;
+  color:#000;
+}
+
+@media (min-width: 668px) and (max-width: 1024px) {
+
+.navbar{
+  font-size: 30px;
+}
+
+.info1{
+  grid-row: 3/5;
+  font-size: small;
+}
+
+
+.big-news{
+  grid-row: 5/10;
+}
+
+.ett{
+  grid-column: 1;
+  grid-row: 13/16;
+  overflow: hidden;
+  padding: 10px;
+  
+}
+
+.två{
+  grid-column: 2;
+  grid-row: 13/16;
+  overflow: hidden;
+  padding: 10px;
+}
+
+.tre{
+  grid-column: 1;
+  grid-row: 17/20;
+  overflow: hidden;
+  padding: 10px;
+}
+
+.fyra{
+  grid-column: 2;
+  grid-row: 17/20;
+  overflow: hidden;
+  padding: 10px;
+}
+
+.fem{
+  grid-column: 1;
+  grid-row: 21/24;
+  overflow: hidden;
+  padding: 10px;
+}
+
+.sex{
+  grid-column: 2;
+  grid-row: 21/24;
+  overflow: hidden;
+  padding: 10px;
+}
+
+.sju{
+  grid-column: 1;
+  grid-row: 25/28;
+  overflow: hidden;
+  padding: 10px;
+}
+
+.åtta{
+  grid-column: 2;
+  grid-row: 25/28;
+  overflow: hidden;
+  padding: 10px;
+}
+
+.text1{
+  text-align: center;
+  grid-column: 1;
+  grid-row: 16;
+  padding: 10px;
+}
+
+.text2{
+  text-align: center;
+  grid-column: 2;
+  grid-row: 16;
+  padding: 10px;
+}
+
+.text3{
+  text-align: center;
+  grid-column: 1;
+  grid-row: 20;
+  padding: 10px;
+}
+
+.text4{
+  text-align: center;
+  grid-column: 2;
+  grid-row: 20;
+  padding: 10px;
+}
+
+.text5{
+  text-align: center;
+  grid-column: 1;
+  grid-row: 24;
+  padding: 10px;
+}
+
+.text6{
+  text-align: center;
+  grid-column: 2;
+  grid-row: 24;
+  padding: 10px;
+}
+
+.text7{
+  text-align: center;
+  grid-column: 1;
+  grid-row: 28;
+  padding: 10px;
+}
+
+.text8{
+  text-align: center;
+  grid-column: 2;
+  grid-row: 28;
+  padding: 10px;
+}
+
+}
+
+@media (min-width: 1025px) {
+
+
+.container{
+  grid-template-columns: repeat(4,1fr);
+  grid-template-rows: repeat(15,100px);
+
+}
+
+.header{
+  grid-column: span 4;
+}
+
+.navbar{
+  text-align: center;
+}
+
+
+.info1{
+  grid-column: 3/5;
+}
+
+.big-news{
+  grid-column: 1/3;
+  grid-row: 3/6;
+  
+}
+.info2{
+  grid-column: span 4;
+  grid-row: 6/8;
+}
+
+.ett{
+  grid-column: 1;
+  grid-row: 9/11;
+  width: 100%;
+  display: flex;
+  
+  
+}
+
+.två{
+  grid-column: 2;
+  grid-row: 9/11;
+  display: flex;
+  
+}
+
+.tre{
+  grid-column: 3;
+  grid-row: 9/11;
+  display: flex;
+}
+
+.fyra{
+  grid-column: 4;
+  grid-row: 9/11;
+  display: flex;
+}
+
+.fem{
+  grid-column: 1;
+  grid-row: 12/14;
+  display: flex;
+}
+
+.sex{
+  grid-column: 2;
+  grid-row: 12/14;
+  display: flex;
+}
+.sju{
+  grid-column: 3;
+  grid-row: 12/14;
+  display: flex;
+}
+.åtta{
+  grid-column: 4;
+  grid-row: 12/14;
+  display: flex;
+}
+
+.text1{
+text-align: center;
+grid-column: 1;
+grid-row: 11;
+}
+
+.text2{
+  text-align: center;
+  grid-column: 2;
+  grid-row: 11;
+}
+
+.text3{
+  text-align: center;
+  grid-column: 3;
+  grid-row: 11;
+} 
+
+.text4{
+  text-align: center;
+  grid-column: 4;
+  grid-row: 11;
+}
+
+.text5{
+  text-align: center;
+  grid-column: 1;
+  grid-row: 14;
+}
+
+.text6{
+  text-align: center;
+  grid-column: 2;
+  grid-row: 14;
+}
+
+.text7{
+  text-align: center;
+  grid-column: 3;
+  grid-row: 14;
+}
+
+.text8{
+  text-align: center;
+  grid-column: 4;
+  grid-row: 14;
+}
+
 }
