--- a/code/style.css
+++ b/code/style.css
@@ -173,7 +173,7 @@ html {
       flex-direction: column;
     }
 
-    big .big-news-img {
+    .big-news-img {
       margin-right: 0;
       margin-bottom: 0;
     }
