--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,413 @@
-html {
-  background: #0025ff;
-  color: #fff;
+@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@900&family=Raleway:wght@300&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background: black;
+  display: flex;
+  justify-content: center;
+}
+
+.content-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+  margin: 0 20px 20px 20px;
+  max-width: 1400px;
+}
+
+header {
+  grid-column: span 4;
+}
+
+/* ----- start navigation -----*/
+.menu-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #1d4b5b;
+  width: 100%;
+  color: #ecedef;
+  height: 120px;
+  padding: 30px 0;
+}
+
+li {
+  font-family: "Raleway", sans-serif;
+  color: #ecedef;
+  font-size: 1.25em;
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu > li {
+  margin: 0 1rem;
+  overflow: hidden;
+}
+
+.menu-button-container {
+  display: none;
+  height: 100%;
+  width: 30px;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#menu-toggle {
+  display: none;
+}
+
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+  display: block;
+  background-color: #ecedef;
+  position: absolute;
+  height: 4px;
+  width: 30px;
+  transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  border-radius: 2px;
+}
+
+.menu-button::before {
+  content: "";
+  margin-top: -8px;
+}
+
+.menu-button::after {
+  content: "";
+  margin-top: 8px;
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::before {
+  margin-top: 0px;
+  transform: rotate(405deg);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button {
+  background: black;
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::after {
+  margin-top: 0px;
+  transform: rotate(-405deg);
+}
+
+/* ----- end navigation -----*/
+
+.welcome {
+  display: flex;
+  justify-content: center;
+  padding: 30px 30px 0 60px;
+}
+
+footer {
+  grid-column: span 4;
+}
+
+.footer-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+  border-top: 1px solid #1d4b5b;
+  padding-top: 20px;
+}
+.logo-wrapper {
+  display: flex;
+  width: 100%;
+}
+
+.logo {
+  width: 100px;
+  padding: 5px;
+}
+
+.footer-text {
+  color: #ecedef;
+  display: flex;
+  align-items: flex-end;
+}
+
+.social-buttons {
+  display: flex;
+  justify-content: flex-end;
+  width: 50%;
+  padding: 20px;
+}
+
+.btn {
+  margin: 10px;
+  width: 30px;
+}
+
+/* --- start fonts: paragraphs and headings ---*/
+p {
+  font-family: "Raleway", sans-serif;
+  color: #ecedef;
+  font-size: 1.25em;
+  padding: 20px;
+}
+
+h1 {
+  font-family: "Cinzel Decorative", serif;
+  font-size: 3em;
+  background-image: linear-gradient(to right, #2f90a1, #ecedef);
+  padding: 20px;
+  text-align: center;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+h2 {
+  font-family: "Cinzel Decorative", serif;
+  font-size: 1.75em;
+  padding: 0 20px 20px 20px;
+  color: #ecedef;
+}
+
+h3 {
+  font-family: "Cinzel Decorative", serif;
+  font-size: 1.5em;
+  padding: 0 20px 20px 20px;
+  color: #ecedef;
+}
+
+h4 {
+  font-family: "Cinzel Decorative", serif;
+  font-size: 1.25em;
+  padding: 0 20px 20px 20px;
+  color: #ecedef;
+}
+
+.category {
+  background: #2f90a1;
+}
+/* --- end fonts: paragraphs and headings ---*/
+
+/* --- base: mobile ---*/
+.big-news {
+  grid-column: span 4;
+}
+
+.small-news {
+  grid-column: span 4;
+}
+
+.big-flex-container {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid #1d4b5b;
+  border-radius: 20px;
+}
+
+.small-flex-container {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid #1d4b5b;
+  border-radius: 20px;
+}
+
+.big-image {
+  width: 100%;
+}
+
+.img-fit {
+  height: 100%;
+  object-fit: cover;
+  max-height: 600px;
+  border-radius: 20px 20px 0 0;
+}
+
+.img-fit-small {
+  border-radius: 20px 20px 0 0;
+}
+
+.big-text {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  background: linear-gradient(black, #1d4b5b);
+  border-radius: 0 0 20px 20px;
+}
+
+.small-image {
+  width: 100%;
+}
+
+.small-text {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  background: linear-gradient(black, #1d4b5b);
+  border-radius: 0 0 20px 20px;
+}
+
+hr {
+  border: none;
+  margin: 0px;
+  height: 1px;
+  background: #1d4b5b;
+  margin: 0 20px;
+}
+
+img {
+  width: 100%;
+}
+
+.button-wrapper {
+  display: flex;
+  align-items: flex-end;
+  height: 100%;
+}
+
+.news-button {
+  display: flex;
+  background-color: #2f90a1;
+  border: 2px solid #ecedef;
+  padding: 0.8em;
+  font-size: 1em;
+  font-family: "Raleway", sans-serif;
+  color: #ecedef;
+  cursor: pointer;
+  border-radius: 0.4em;
+  margin: 0 20px 20px 20px;
+  width: 100%;
+  justify-content: center;
+}
+.news-button:hover {
+  color: #2f90a1;
+  background-color: #ecedef;
+  border: 2px solid #2f90a1;
+}
+
+.underline {
+  cursor: pointer;
+  background-image: linear-gradient(90deg, #2f90a1 0%, #2f90a1 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 0.4em;
+  background-position: 0 88%;
+  transition: all 0.25s ease-in;
+  &:hover {
+    background-size: 100% 100%;
+    color: #ecedef;
+  }
+}
+
+a {
+  text-decoration: none;
+  color: #ecedef;
+}
+
+a:hover {
+  color: #2f90a1;
+}
+
+/* --- media query for hamburger (mobile & tablet) ---*/
+@media (max-width: 1024px) {
+  .menu-button-container {
+    display: flex;
+  }
+
+  .menu {
+    position: absolute;
+    top: 0;
+    margin-top: 120px;
+    left: 0;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  #menu-toggle ~ .menu li {
+    height: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  #menu-toggle:checked ~ .menu li {
+    border-bottom: 2px solid #1d4b5b;
+    height: 2.5em;
+    padding: 0.5em;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    background-image: linear-gradient(to right, #2f90a1, #ecedef);
+  }
+  .menu > li {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0.5em 0;
+    width: 100%;
+    color: #ecedef;
+    background-color: #ecedef;
+  }
+}
+
+/* --- media query for tablet --- */
+@media (min-width: 668px) and (max-width: 1024px) {
+  .small-news {
+    grid-column: span 2;
+  }
+
+  .big-flex-container {
+    flex-direction: row;
+  }
+
+  .big-image {
+    width: 50%;
+  }
+
+  .big-text {
+    width: 50%;
+    border-radius: 0 20px 20px 0;
+  }
+
+  .footer-wrapper {
+    flex-direction: row;
+  }
+
+  .img-fit {
+    border-radius: 20px 0 0 20px;
+  }
+}
+
+/* --- media query for desktop --- */
+@media (min-width: 1025px) {
+  .small-news {
+    grid-column: span 1;
+  }
+  .big-flex-container {
+    flex-direction: row;
+  }
+
+  .big-image {
+    width: 50%;
+  }
+
+  .big-text {
+    width: 50%;
+    border-radius: 0 20px 20px 0;
+  }
+
+  .footer-wrapper {
+    flex-direction: row;
+  }
+
+  .img-fit {
+    border-radius: 20px 0 0 20px;
+  }
 }
