--- a/code/style.css
+++ b/code/style.css
@@ -1,20 +1,24 @@
 body {
-  background-color: aliceblue;
+  background-color: #FCFFEF;
   display: grid;
   grid-template-columns: repeat(4, 25%);
   margin: 0px;
 }
 h2, h3 {
-    font-family: 'Playpen Sans', cursive;
+  font-family: 'Nunito', sans-serif;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
 }
 p {
   font-family: 'Montserrat', sans-serif;
+  margin-top: 0px;
 }
 
 header {
   grid-column: span 4;
   display: grid;
   grid-template-columns: 1fr 5fr 1fr;
+  background-color: #7EB486;
   height: 100px;
   border-bottom:2px solid black;
   padding-bottom: 10px;
@@ -24,7 +28,7 @@ header {
   width: 100px;
 }
 h1 {
-  font-family: 'Almendra SC', serif;
+  font-family: 'Rubik Doodle Shadow', system-ui;
   font-size: 40px;
   margin: 0px;
   padding-top: 10px;
@@ -75,13 +79,16 @@ button {
   float: right;
   margin: 20px;
   font-family: 'Montserrat', sans-serif;
+  display: inline;
 }
 .small-news {
   grid-column: span 4;
   width: 90%;
-  justify-content: center;
   border: 2px dotted;
   margin: 0px 10px 20px 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .small-news h3 {
   padding-left: 10px;
@@ -91,7 +98,7 @@ button {
 }
 .small-news img {
   width:80%;
-  margin: 10px;
+  margin: 10px 10px 0px 10px;
 }
 
 @media (min-width: 667px) {
@@ -112,16 +119,19 @@ button {
     font-size: 16px;
   }
   .big-news {
-    display: inline;
+    display: inline-block;
   }
   h2 {
     margin: 0px;
-    padding: 20px 0px 10px 0px;
+    padding-top: 20px;
     font-size: 30px;
   }
   .photo-display {
     float: left;
     width: 300px;
+  }
+  .small-news {
+    display: inline-block;
   }
   .small-news img {
       width: 40%;
