--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ html {background-color: pink;
   
   }
   .flex-parent {
-    padding: 20px; 
+    padding-top: 20px; 
     font-size: 18px; 
     flex-direction: row; 
     align-items: center; 
