--- a/code/style.css
+++ b/code/style.css
@@ -351,10 +351,16 @@ footer {
   .main-article {
     grid-template-columns: 1fr 1fr;
     align-items: center;
+    max-width: 1400px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .other-articles {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    max-width: 1400px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .article-content {
